--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -2,14 +2,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    <title>opensource25.github.io</title>
+    <title>Noten lernen</title>
 
-    <script src="jquery-3.6.0.min.js"></script>
+    <script src="../jquery-3.6.0.min.js"></script>
+    <script src="main.ts"></script>
 </head>
 
 <body>
-    
-    <h1>Home</h1>
-
 </body>
 </html>
