--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <script src="jquery-3.6.0.min.js"></script>
 </head>
 
-<body>
+<body onload="redirect()">
     
-    <h1>Test</h1>
+    <script>
+    
+        function redirect() {
+            window.location.replace("https://opensource25.github.io/noten-lernen")
+        }
+
+    </script>
 
 </body>
 </html>
