first steps at navbar

--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -5,9 +5,27 @@
     <title>Noten lernen</title>
 
     <script src="../jquery-3.6.0.min.js"></script>
-    <script src="main.ts"></script>
+    <script src="main.js"></script>
+
+    <!-- Das neueste kompilierte und minimierte CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- Das neueste kompilierte und minimierte JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+    
 </head>
 
-<body>
+<body onload="onload()">
+
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    <img id="logo" src="images/logo2.png" alt="Titel">
+                </a>
+            </div>
+        </div>
+    </nav>
+
 </body>
 </html>
