first steps at navbar

--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -17,7 +17,7 @@
 
 <body onload="onload()">
 
-    <nav class="navbar navbar-default">
+    <!-- <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">
@@ -25,7 +25,9 @@
                 </a>
             </div>
         </div>
-    </nav>
+    </nav> -->
+
+    <img id="logo" src="images/logo2.png" alt="Titel">
 
 </body>
 </html>
