--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -15,7 +15,7 @@
     
 </head>
 
-<body onload="onload()">
+<body>
 
     <nav class="navbar navbar-default">
         <div class="container-fluid">
