first steps at navbar

--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -20,14 +20,12 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    <img id="logo" src="images/logo2.png" alt="Titel">
+                <a href="#">
+                    <img id="logo" src="images/logo2.png" alt="Logo" >
                 </a>
             </div>
         </div>
     </nav>
-
-    <!-- <img id="logo" src="images/logo2.png" alt="Titel"> -->
 
 </body>
 </html>
