first steps at navbar

--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -21,7 +21,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a href="#">
-                    <img id="logo" src="images/logo2.png" alt="Logo" >
+                    <img id="logo" src="images/logo2.png" alt="Logo" sizes="10%">
                 </a>
             </div>
         </div>
