--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -7,6 +7,8 @@
     <script src="../jquery-3.6.0.min.js"></script>
     <script src="main.js"></script>
 
+    <link rel="stylesheet" href="css/index.css">
+
     <!-- Das neueste kompilierte und minimierte CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- Das neueste kompilierte und minimierte JavaScript -->
