--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -22,8 +22,8 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a href="#">
-                    <img id="logo" src="images/logo2.png" alt="Logo" sizes="10%">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo1.svg" alt="Logo">
                 </a>
             </div>
         </div>
