--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -22,12 +22,21 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    <img src="images/logo1.svg" alt="Logo">
-                </a>
+                <a class="navbar-brand" href="#"> Notenlernen </a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="navbar-nav nav">
+                    <li class="active"> Klavier </li>
+                    <li><i>comming soon</i></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.css" class="btn btn-default">Home</a></li>
+                </ul>
             </div>
         </div>
     </nav>
+
+    <h1>test</h1>
 
 </body>
 </html>
