--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -26,8 +26,8 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="navbar-nav nav">
-                    <li class="active"> Klavier </li>
-                    <li><i>comming soon</i></li>
+                    <li class="active"><a href="">Klavier</a></li>
+                    <li><a href=""><i>comming soon</i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.css" class="btn btn-default">Home</a></li>
