--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="navbar-nav nav">
-                    <li class="active"><a href="?instrument=keyboard">Klavier</a></li>
+                    <li class="active"><a href="noten-lernen/?instrument=keyboard">Klavier</a></li>
                     <li><a href=""><i>comming soon</i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
