--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -30,13 +30,17 @@
                     <li><a href=""><i>comming soon</i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.css" class="btn btn-default">Home</a></li>
+                    <li><a href="index.css" class="btn btn-default navbar-btn">Home</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <h1>test</h1>
+    <div class="transparent">
+
+
+
+    </div>
 
 </body>
 </html>
