build the navbar

--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -30,7 +30,7 @@
                     <li><a href=""><i>comming soon</i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.css" class="btn btn-default navbar-btn">Home</a></li>
+                    <li><button onclick="location.href = index.css" class="btn btn-default navbar-btn">Home</button></li>
                 </ul>
             </div>
         </div>
