build the note box

--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -36,9 +36,18 @@
         </div>
     </nav>
 
+    <div class="control">
+        <form action="" method="get" class="form-inline">
+            <div class="form-group">
+                <label for="amount-range-slider">Noten Anzahl: </label>
+                <input type="range" class="form-range" id="amount-range-slider">
+            </div>
+        </form>
+    </div>
+    
     <div class="transparent">
 
-
+        
 
     </div>
 
