--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default-10">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#"> Notenlernen </a>
@@ -42,6 +42,7 @@
                 <label for="amount-range-slider">Noten Anzahl: </label>
                 <input type="range" class="form-range" id="amount-range-slider">
             </div>
+            <button type="submit" class="btn btn-default">Übernehmen</button>
         </form>
     </div>
     
