--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <nav class="navbar navbar-default-10">
+    <nav class="navbar navbar-default margin-10">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#"> Notenlernen </a>
