--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -40,9 +40,10 @@
         <form action="" method="get" class="form-inline">
             <div class="form-group">
                 <label for="amount-range-slider">Noten Anzahl: </label>
-                <input type="range" class="form-range" id="amount-range-slider">
+                <input type="range" class="form-range" id="amount-range-slider" min="1" max="10" step="1" oninput="this.nextElementSibling.value = this.value">
+                <output>5</output>
             </div>
-            <button type="submit" class="btn btn-default">Übernehmen</button>
+            <button type="submit" class="btn btn-default form-right">Übernehmen</button>
         </form>
     </div>
     
