build the note box

--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -43,7 +43,7 @@
                 <input type="range" class="form-range" id="amount-range-slider" value="5" min="1" max="10" step="1" onmousemove="amount.value=this.value">
                 <output id="amount" name="amount" for="amount-range-slider">5</output>
             </div>
-            <button type="submit" class="btn btn-default form-right">Übernehmen</button>
+            <button type="submit" class="btn btn-default right">Übernehmen</button>
         </form>
     </div>
     
