--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -36,12 +36,11 @@
         </div>
     </nav>
 
-    <div class="control">
-        <form action="" method="get" class="form-inline">
+    <div class="control margin-10">
+        <form action="" method="get" class="form-inline margin-10">
             <div class="form-group">
-                <label for="amount-range-slider">Noten Anzahl: </label>
-                <input type="range" class="form-range" id="amount-range-slider" value="5" min="1" max="10" step="1" onmousemove="amount.value=this.value">
-                <output id="amount" name="amount" for="amount-range-slider">5</output>
+                <label for="note-amount-range-slider" id="note-amount">Noten Anzahl: </label>
+                <input type="range" class="form-range" id="note-amount-range-slider" value="5" min="1" max="10" step="1" onmousemove="update_note_amount()">
             </div>
             <button type="submit" class="btn btn-default right">Übernehmen</button>
         </form>
