--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -17,7 +17,7 @@
     
 </head>
 
-<body onload="onload">
+<body onload="onload();">
 
     <nav class="navbar navbar-default navbar-inverse padding-10 margin-10">
         <div class="container-fluid">
