--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -40,7 +40,7 @@
         <form action="" method="get" class="form-inline margin-10">
             <div class="form-group">
                 <label for="note-amount-range-slider" id="note-amount">Noten Anzahl: </label>
-                <input type="range" class="form-range" id="note-amount-range-slider" onload="changeScrollBar(5)" value="5" min="1" max="10" step="1" onmousemove="update_note_amount()">
+                <input type="range" class="form-range" id="note-amount-range-slider" on onload="changeScrollBar(5)" value="5" min="1" max="10" step="1" onmousemove="update_note_amount()">
             </div>
             <button type="submit" class="btn btn-default right">Übernehmen</button>
         </form>
