--- a/noten-lernen/index.html
+++ b/noten-lernen/index.html
@@ -42,7 +42,7 @@
                 <label for="note-amount-range-slider" id="note-amount">Noten Anzahl: </label>
                 <input type="range" class="form-range" id="note-amount-range-slider" onload="changeScrollBar(5)" value="5" min="1" max="10" step="1" onmousemove="update_note_amount()">
             </div>
-            <button type="submit" class="btn btn-default right">Übernehmen</button>
+            <button type="submit" class="btn btn-default btn-success right">Übernehmen</button>
         </form>
     </div>
     
